[ANY] IDEA codestyle (thanks microwin7)